# claude-rs

./: CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  MOCK_TESTING.md  README.md  STREAMING.md
benches/: client_benchmarks.rs  context_benchmarks.rs  domain_registry_benchmarks.rs  json_benchmarks.rs
examples/: basic.rs  concurrent_domain_registry.rs  domain_specific.rs  error_handling.rs  function_calling.rs  max_tokens_example.rs  streaming.rs  testing_pattern.rs  translation_example.rs  validation_examples.rs
src/: builder.rs  client.rs  context.rs  lib.rs  middleware.rs  reactive.rs  types.rs
src/domains/: base.rs  code.rs  content.rs  entity.rs  mod.rs  sentiment.rs  translation.rs
src/utils/: json_extractor.rs  mod.rs  token_counter.rs
tests/: basic_mock_test.rs  builder_tests.rs  client_integration.rs  client_tests.rs  context_tests.rs  domain_mock_tests.rs  domain_tests.rs  full_client_flow_tests.rs  integration_tests.rs  middleware_tests.rs  mock_api_client.rs  mock_client_adapter.rs  mod.rs  performance_tests.rs  reactive_tests.rs  simple_test.rs  simplified_test.rs  streaming_tests.rs  test_helpers.rs  translation_tests.rs  utils_tests.rs
tests/integration/: domain_integration.rs  error_integration.rs  mod.rs  streaming_integration.rs
