[package]
name = "claude-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An innovative Rust SDK for Anthropic's Claude API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/claude-rs"
keywords = ["claude", "ai", "anthropic", "llm", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
regex = "1.7"
lazy_static = "1.4"
tracing = "0.1"
url = "2.3"
tiktoken-rs = "0.5"
bytes = "1.0"
dashmap = "5.5.3"
log = "0.4"

# Optional dependencies
tokio-stream = { version = "0.1", optional = true }
pin-project = { version = "1.0", optional = true }

[features]
default = []
reactive = ["dep:tokio-stream", "dep:pin-project"]

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
once_cell = "1.17"
pretty_assertions = "1.3"
criterion = "0.5"
tikv-jemallocator = "0.5"
memory-stats = "1.0"
async-stream = "0.3.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "domain_specific"
path = "examples/domain_specific.rs"

[[example]]
name = "function_calling"
path = "examples/function_calling.rs"

[[example]]
name = "validation_examples"
path = "examples/validation_examples.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "testing_pattern"
path = "examples/testing_pattern.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "client_benchmarks"
harness = false

[[bench]]
name = "context_benchmarks"
harness = false

[[bench]]
name = "json_benchmarks"
harness = false

[[bench]]
name = "domain_registry_benchmarks"
harness = false